# casdoor-mcp

./: README.md  SPEC.md  pyproject.toml
.github/workflows/: build.yml
docs/: index.html
src/casdoor_mcp/: __main__.py  client.py  config.py  server.py  tools.py
tests/: test_config.py  test_tools.py
